--- a/src/components/Convert/Convert.scss
+++ b/src/components/Convert/Convert.scss
@@ -1,2 +1,10 @@
 .convert-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.error {
+  color: red;
+  margin: 10px;
 }
