--- a/src/components/AllCurrencies/AllCurrencies.scss
+++ b/src/components/AllCurrencies/AllCurrencies.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .curr-list {
   display: flex;
   flex-direction: column;
@@ -13,11 +15,11 @@
   font-weight: 600;
   width: 80%;
   border-radius: 12px;
-  border-bottom: 1px solid rgb(240, 245, 250);
+  border-bottom: 1px solid $light-grey-color;
   flex: 1 1 0px;
 
   &.base {
-    background-color: rgb(10, 20, 110);
+    background-color: $main-color;
     color: white;
   }
 }
@@ -35,7 +37,7 @@
 
 .curr-list-header {
   font-size: 2.4rem;
-  color: rgb(10, 20, 110);
+  color: $main-color;
   text-align: center;
   margin: 60px 0 0px 0;
 }
